--- a/HandWriting_Detector_project_Submission3.ipynb
+++ b/HandWriting_Detector_project_Submission3.ipynb
@@ -101,20 +101,8 @@
     "<p>Another thing that papers have are results that you can use to compare to your solution so you can see if your solution approach has merit.  If your solution does not do as well as solutions reported in the papers, use the papers to find ideas to improve the solution that you have.</p>\n",
     "<p>You want to look for papers listed in the Scopus database available through the <a href=\"https://ttu-primo.hosted.exlibrisgroup.com/primo-explore/dbsearch?vid=01TTU\">TTU Library's Website</a>, and enter \"Scopus\" into the search box.  Papers listed in Scopus will be in venues recognized by scholars and the papers you use should have at least 5 citations.  In particular, when reading the papers, look for relationships among the solution ideas, how the authors evaluated their solutions, and what promising ideas the authors think could improve their work.</p>\n",
     "\n",
-    "<p>Use <a href=\"https://ieee-dataport.org/sites/default/files/analysis/27/IEEE%20Citation%20Guidelines.pdf\">IEEE</a> or <a href=\"https://www.acm.org/publications/authors/reference-formatting\">ACM</a> format for listing the paper references.  An example is following.</p>\n",
+    "<p>Use <a href=\"https://ieee-dataport.org/sites/default/files/analysis/27/IEEE%20Citation%20Guidelines.pdf\">IEEE</a> or <a href=\"https://www.acm.org/publications/authors/reference-formatting\">ACM</a> format for listing the paper references.</p>\n",
     "<ul>\n",
-    "    <li style=\"color:maroon\"><h4><bf>David Silver, Thomas Hubert, Julian Schrittwieser, Ioannis Antonoglou, Matthew Lai, Arthur Guez, Marc Lanctot et al. 2018. A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play. Science 362, 6419 (2018), 1140-1144.  https://www.science.org/doi/epdf/10.1126/science.aar6404, 4070 citations (Google Scholar), 2276 citations (Scopus).</bf></h4></li>\n",
-    "    <ul>\n",
-    "        <li><h5>Problem:</h5>  How can the AlphaGo Zero algorithm be made a more general algorithm to achieve superhuman performance in many challenging games?</li>\n",
-    "        <li><h5>Past Solution Ideas:</h5>  Early chess playing bots (hardware and algorithms to play chess), Deep Blue and subsequent chess-playing programs (high-performance alpha-beta search with many clever heuristics and domain-specific adaptions), AlphaGo Zero algorithm (deep convolutional neural networks trained by reinforcement learning from games of self-play), Computer Shogi Association's Elmo (optimized alpha-beta search with domain-specific adaptations)</li>\n",
-    "        <li><h5>Authors' Solution Ideas:</h5>  AlphaZero algorithm (more generic version than AlphaGo Zero, deep neural networks, general purpose RL algorithm and Monte Carlo tree search algorithms)</li>\n",
-    "        <li><h5>Future Promising Solution Ideas:</h5>  not mentioned but could investigate more RL techniques to create general game-playing systems, find optimizations for AlphaZero to use less memory and search time, apply AlphaZero to complex robotic tasks</li>\n",
-    "        <li><h5>Evaluation Ideas:</h5>  Pitted AlphaZero against Stockfish (chess), Elmo (Shogi), and Go (AlphaGo Zero) where AlphaZero turned out to be more efficient in search and could outperform all 3 with sufficient training</li>\n",
-    "        <li><h5>Ideas the Team Would Like to Use From This Paper:</h5>  deep neural networks, reinforcement learning</li>\n",
-    "    </ul>\n",
-    "</ul>\n",
-    "\n",
-    "<hr>\n",
     "\n",
     "<ul>\n",
     "<li style=\"color:maroon\"><h4><bf>A. Paszke, S. Gross, F. Massa, A. Lerer, J. Bradbury, G. Chanan, T. Killeen, Z. Lin, N. Gimelshein, L. Antiga, A. Desmaison, A. Köpf, E. Yang, Z. DeVito, M. Raison, A. Tejani, S. Chilamkurthy, B. Steiner, L. Fang, J. Bai, and S. Chintala, \"PyTorch: An Imperative Style, High-Performance Deep Learning Library,\" in Advances in Neural Information Processing Systems 32 (NeurIPS 2019), Vancouver, Canada, 2019.</bf></h4></li>\n",
@@ -127,6 +115,8 @@
     "        <li><h5>Ideas the Team Would Like to Use From This Paper:</h5> helps in understanding the various configuraions for CNN and fully connected layers and utilizing custome data sets such as kaggle in built in pyTorch and more extended use with creations in additonal layers and accuracy for different model architectures </li>\n",
     "    </ul>\n",
     "    <ul>\n",
+    "\n",
+    "<hr>\n",
     "   <li style=\"color:maroon\"><h4><bf>A. Remaida, A. Moumen, Y. El Bouzekri El Idrissi, and B. Abdellaoui, “Tuning convolutional neural networks hyperparameters for offline handwriting recognition,” Proceedings of the 2nd International Conference on Big Data, Modelling and Machine Learning, pp. 71–76, 2021. doi:10.5220/0010728600003101 </bf></h4></li>\n",
     "   <ul>\n",
     "       <li><h5>Problem:</h5>How can we optimize Convolutional Neural Network (CNN) hyperparameters to improve performance in offline handwriting recognition, specifically for the EMNIST letters dataset, while addressing computational complexity and training time challenges?</li>\n",
@@ -492,6 +482,16 @@
     "# Show the plot\n",
     "plt.tight_layout()  \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac446cf7-469f-4e97-a557-ef827cf49ae6",
+   "metadata": {},
+   "source": [
+    " <h1 style=\"color: teal\">Discussion for further improvement for Team Solutions: </h1>\n",
+    "\n",
+    "#### 1. Harshit Bhatta: More epochs could be performed on the training of the model by making use of the HPCC, and hyperparameters could be optimized after analyzing the optimal number of epochs, to then tune other parameters to support this direction of improvement for futher development/improvement of the model."
    ]
   },
   {
