added more changes

--- a/HandWriting_Detector_project_Submission3.ipynb
+++ b/HandWriting_Detector_project_Submission3.ipynb
@@ -491,7 +491,10 @@
    "source": [
     " <h1 style=\"color: teal\">Discussion for further improvement for Team Solutions: </h1>\n",
     "\n",
-    "#### 1. Harshit Bhatta: More epochs could be performed on the training of the model by making use of the HPCC, and hyperparameters could be optimized after analyzing the optimal number of epochs, to then tune other parameters to support this direction of improvement for futher development/improvement of the model."
+    "#### 1. Harshit Bhatta: More epochs could be performed on the training of the model by making use of the HPCC, and hyperparameters could be optimized after analyzing the optimal number of epochs, to then tune other parameters to support this direction of improvement for futher development/improvement of the model.\n",
+    "\n",
+    "\n",
+    "#### 2. Sagar Basavaraju : Based on the training set their could be more evaluation paramters set and also more used on external servers and databases such as the HPCC, more epochs so the model could train better and reducing its spatial inefficiencies. Also Their could be more added layers and also utilizing more hyperparamters and reducing the lost functions on each iteration. "
    ]
   },
   {
@@ -917,36 +920,16 @@
     "    <li>Extensively researching of libraries and optimizations bring important metrics such as F1 Score,accuracy. Using differentiating between labeling and unlabeled data and simulating unlabeled data and extensivly using metrics from sklearn and creating y-pred and y-true values and detailed prediction analyzes based on how well support was compared to true labeled data. </li>\n",
     "</ul>\n",
     "\n",
-    "<h5 style=\"color:darkblue\">Team member name</h5>\n",
-    "\n",
-    "<ul>\n",
-    "    <li>mm/dd/yyyy - major change made for this submission</li>\n",
-    "    <li>...</li>\n",
-    "</ul>\n",
     "\n",
     "..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2b3f9cba-98c2-4c51-9a4f-488c07be834e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [1/4], Loss: 153.0509\n",
-      "Epoch [2/4], Loss: 41.4978\n",
-      "Epoch [3/4], Loss: 29.1041\n",
-      "Epoch [4/4], Loss: 24.2825\n",
-      "Accuracy if no labels: 0.10%\n",
-      "F1-Score if no labels: 0.10%\n",
-      "Predictions (first 10): [2, 0, 9, 0, 3, 7, 0, 3, 0, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#code cells for running and evaluating the solution\n",
     "\n",
@@ -1044,6 +1027,8 @@
     "        print(f\"Accuracy: {accuracy:.2f}%\")\n",
     "        print(f\"F1-Score: {F1_score:.2f}%\")\n",
     "else:\n",
+    "    total = 0\n",
+    "    correct = 0\n",
     "    with torch.no_grad():\n",
     "        for images in test_loader:\n",
     "            if len(images.shape) != 4:\n",
@@ -1051,13 +1036,16 @@
     "            outputs = model(images)\n",
     "            _, predictions = torch.max(outputs, 1)\n",
     "            y_pred.extend(predictions.cpu().numpy().tolist())\n",
+    "            total += labels.size(0)\n",
+    "            correct += (predictions == labels).sum().item()\n",
     "    #simulations if labels were provided:\n",
     "    nlabels = np.random.choice(10,len(y_pred)) \n",
     "    accuracy = accuracy_score(nlabels,y_pred)\n",
+    "    acc = correct/total * 100\n",
     "    F1_score = f1_score(nlabels,y_pred,average=\"weighted\")\n",
     "    print(f\"Accuracy if no labels: {accuracy:.2f}%\")\n",
     "    print(f\"F1-Score if no labels: {F1_score:.2f}%\")\n",
-    "\n",
+    "    print(f\"Manual Accuracy: {acc:.2f}%\")\n",
     "\n",
     "print(f\"Predictions (first 10): {y_pred[:10]}\")\n"
    ]
