--- a/HandWriting_Detector_project_Submission3.ipynb
+++ b/HandWriting_Detector_project_Submission3.ipynb
@@ -965,7 +965,7 @@
     "        return image\n",
     "\n",
     "# Load Datasets\n",
-    "train_dataset = CustomMNISTDataset(name=\"train.csv\", is_labeled=True)\n",
+    "train_dataset = CustomMNISTDataset(name='', is_labeled=True)\n",
     "test_dataset = CustomMNISTDataset(name=\"test.csv\", is_labeled=False)\n",
     "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
     "test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False)\n",
