--- a/HandWriting_Detector_project_Submission3.ipynb
+++ b/HandWriting_Detector_project_Submission3.ipynb
@@ -926,13 +926,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2b3f9cba-98c2-4c51-9a4f-488c07be834e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/4], Loss: 419.9390\n",
+      "Epoch [2/4], Loss: 303.0762\n",
+      "Epoch [3/4], Loss: 284.4433\n",
+      "Epoch [4/4], Loss: 278.5116\n",
+      "Accuracy if no labels: 0.10%\n",
+      "F1-Score if no labels: 0.10%\n",
+      "Predictions (first 10): [2, 0, 9, 0, 3, 7, 0, 3, 0, 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "#code cells for running and evaluating the solution\n",
-    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import pandas as pd\n",
@@ -965,7 +977,7 @@
     "        return image\n",
     "\n",
     "# Load Datasets\n",
-    "train_dataset = CustomMNISTDataset(name='', is_labeled=True)\n",
+    "train_dataset = CustomMNISTDataset(name=\"train.csv\", is_labeled=True)\n",
     "test_dataset = CustomMNISTDataset(name=\"test.csv\", is_labeled=False)\n",
     "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
     "test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False)\n",
@@ -978,6 +990,7 @@
     "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1)\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
     "        self.flatten = nn.Flatten()\n",
+    "        self.dropout = nn.Dropout(0.3)\n",
     "        self.fc = nn.Linear(64 * 7 * 7, 10)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -985,6 +998,7 @@
     "        x = self.pool(torch.relu(self.conv2(x)))\n",
     "        x = self.flatten(x)\n",
     "        x = self.fc(x)\n",
+    "        x = self.dropout(x)\n",
     "        return x\n",
     "\n",
     "# Training\n",
@@ -1027,8 +1041,6 @@
     "        print(f\"Accuracy: {accuracy:.2f}%\")\n",
     "        print(f\"F1-Score: {F1_score:.2f}%\")\n",
     "else:\n",
-    "    total = 0\n",
-    "    correct = 0\n",
     "    with torch.no_grad():\n",
     "        for images in test_loader:\n",
     "            if len(images.shape) != 4:\n",
@@ -1036,16 +1048,13 @@
     "            outputs = model(images)\n",
     "            _, predictions = torch.max(outputs, 1)\n",
     "            y_pred.extend(predictions.cpu().numpy().tolist())\n",
-    "            total += labels.size(0)\n",
-    "            correct += (predictions == labels).sum().item()\n",
     "    #simulations if labels were provided:\n",
     "    nlabels = np.random.choice(10,len(y_pred)) \n",
     "    accuracy = accuracy_score(nlabels,y_pred)\n",
-    "    acc = correct/total * 100\n",
     "    F1_score = f1_score(nlabels,y_pred,average=\"weighted\")\n",
     "    print(f\"Accuracy if no labels: {accuracy:.2f}%\")\n",
     "    print(f\"F1-Score if no labels: {F1_score:.2f}%\")\n",
-    "    print(f\"Manual Accuracy: {acc:.2f}%\")\n",
+    "\n",
     "\n",
     "print(f\"Predictions (first 10): {y_pred[:10]}\")\n"
    ]
