--- a/HandWriting_Detector_project_Submission3.ipynb
+++ b/HandWriting_Detector_project_Submission3.ipynb
@@ -76,7 +76,7 @@
     "        <li><h5>Lessons Learned: </h5>\n",
     "            <ul>\n",
     "                <li>A lot of lessons reegarding the importance of hyperparameters in the efficiency and accuracy of the model were explored and learned. (Harshit Bhatta)</li> \n",
-    "                <li>Lesson Learned...</li>\n",
+    "                <li>Improving performance metrics on model and improving learning rate and helping the model access all of its releavant features to help reducing spatial features and visualizations helped us to understand the model and its advances.</li>\n",
     "            </ul>\n",
     "        </li>\n",
     "    </ul>\n",
