--- a/HandWriting_Detector_project_Submission3.ipynb
+++ b/HandWriting_Detector_project_Submission3.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "<hr>\n",
-    "<h1 style=\"color:darkgoldenrod\">Enter the Team Name Here</h1>\n",
+    "<h1 style=\"color:darkgoldenrod\">Handwriting Detector</h1>\n",
     "\n",
     "<ul>\n",
     "<li style=\"color:maroon\"><h4><bf>Sagar Basavaraju</bf></h4></li>\n",
