Update file via upload

--- a/HandWriting_Detector_project_Submission3.ipynb
+++ b/HandWriting_Detector_project_Submission3.ipynb
@@ -83,13 +83,9 @@
     "        <li><h5>Lessons Learned: </h5>\n",
     "            <ul>\n",
     "                <li>A lot of lessons reegarding the importance of hyperparameters in the efficiency and accuracy of the model were explored and learned. (Harshit Bhatta)</li> \n",
-<<<<<<< HEAD
     "                <li>Attention mechanisms improve performance but increase computational and memory requirements, necessitating optimization in future iterations.(Junghwan Bae)</li>\n",
     "                <li>Diverse augmentation techniques enhance the model’s robustness but require careful calibration to avoid introducing noise.(Junghwan Bae)</li>\n",
     "                <li>Transfer learning, although not implemented in this submission, is expected to be a key component in achieving state-of-the-art results on multilingual numeral datasets.(Junghwan Bae)</li>\n",
-=======
-    "                <li>Improving performance metrics on model and improving learning rate and helping the model access all of its releavant features to help reducing spatial features and visualizations helped us to understand the model and its advances.</li>\n",
->>>>>>> f6ba8c59364f400e6e98aaaaafc344b39eefa0e1
     "            </ul>\n",
     "        </li>\n",
     "    </ul>\n",
@@ -696,7 +692,9 @@
    "source": [
     " <h1 style=\"color: teal\">Discussion for further improvement for Team Solutions: </h1>\n",
     "\n",
-    "#### 1. Harshit Bhatta: More epochs could be performed on the training of the model by making use of the HPCC, and hyperparameters could be optimized after analyzing the optimal number of epochs, to then tune other parameters to support this direction of improvement for futher development/improvement of the model."
+    "#### 1. Harshit Bhatta: More epochs could be performed on the training of the model by making use of the HPCC, and hyperparameters could be optimized after analyzing the optimal number of epochs, to then tune other parameters to support this direction of improvement for futher development/improvement of the model.\n",
+    "\n",
+    "#### 2. Junghwan Bae: Transfer learning techniques can significantly enhance the performance of our models by leveraging pre-trained networks such as ResNet or MobileNet. These networks have already learned robust feature extraction from large datasets, which can be fine-tuned for our specific tasks. Incorporating transfer learning into models like Junghwan Bae's Enhanced CNN can improve accuracy beyond the current 89% for multilingual numeral datasets while reducing training time."
    ]
   },
   {
